--- a/spartan/aztec-network/templates/setup-l2-contracts.yaml
+++ b/spartan/aztec-network/templates/setup-l2-contracts.yaml
@@ -102,7 +102,7 @@ spec:
             - name: TELEMETRY
               value: "{{ .Values.telemetry.enabled }}"
             - name: LOG_LEVEL
-              value: "debug"
+              value: "debug; info: aztec:simulator, json-rpc"
             - name: NETWORK_PUBLIC
               value: "{{ .Values.network.public }}"
             - name: NAMESPACE
