--- a/spartan/aztec-network/resources/default.yaml
+++ b/spartan/aztec-network/resources/default.yaml
@@ -1,9 +1,9 @@
 bootNode:
   resources:
     requests:
-      memory: "512Mi"
+      memory: "1Gi"
     limits:
-      memory: "512Mi"
+      memory: "1Gi"
       cpu: "500m"
 
 validator:
@@ -32,9 +32,9 @@ proverNode:
 pxe:
   resources:
     requests:
-      memory: "512Mi"
+      memory: "1Gi"
     limits:
-      memory: "512Mi"
+      memory: "1Gi"
       cpu: "500m"
 
 bot:
@@ -42,9 +42,9 @@ bot:
     spotEnabled: true
   resources:
     requests:
-      memory: "512Mi"
+      memory: "1Gi"
     limits:
-      memory: "512Mi"
+      memory: "1Gi"
       cpu: "500m"
 
 proverAgent:
