--- a/spartan/aztec-network/templates/setup-l2-contracts.yaml
+++ b/spartan/aztec-network/templates/setup-l2-contracts.yaml
@@ -65,7 +65,6 @@ spec:
               done
               echo "PXE service is ready!"
               set -e
-              export LOG_LEVEL=debug
 
               TEST_ACCOUNTS=${TEST_ACCOUNTS:-false}
               TEST_ACCOUNTS_ARG=""
@@ -102,7 +101,9 @@ spec:
             - name: TELEMETRY
               value: "{{ .Values.telemetry.enabled }}"
             - name: LOG_LEVEL
-              value: "debug"
+              value: "debug; info: aztec:simulator, json-rpc"
+            - name: LOG_JSON
+              value: "false"
             - name: NETWORK_PUBLIC
               value: "{{ .Values.network.public }}"
             - name: NAMESPACE
