chore: fix kind transfer test

--- a/spartan/aztec-network/templates/blob-sink.yaml
+++ b/spartan/aztec-network/templates/blob-sink.yaml
@@ -37,6 +37,7 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       initContainers:
         {{- include "aztec-network.serviceAddressSetupContainer" . | nindent 8 }}
+        {{- include "aztec-network.combinedWaitAndConfigureContainer" . | nindent 8 }}
       containers:
         - name: blob-sink
           {{- include "aztec-network.image" . | nindent 10 }}
@@ -44,8 +45,10 @@ spec:
             - /bin/bash
             - -c
             - |
-              source /shared/config/service-addresses && \
-              env && \
+              source /shared/contracts/contracts.env
+              source /shared/config/service-addresses
+              env
+
               node --no-warnings /usr/src/yarn-project/aztec/dest/bin/index.js start --blob-sink
           startupProbe:
             httpGet:
@@ -66,6 +69,9 @@ spec:
               mountPath: {{ .Values.blobSink.dataStoreConfig.dataDir }}
             - name: config
               mountPath: /shared/config
+            - name: contracts-env
+              mountPath: /shared/contracts/contracts.env
+              subPath: contracts.env
           env:
             - name: POD_IP
               valueFrom:
@@ -109,6 +115,10 @@ spec:
             name: {{ include "aztec-network.fullname" . }}-scripts
             defaultMode: 0755
         - name: config
+          emptyDir: {}
+        - name: contracts-env
+          emptyDir: {}
+        - name: pxe-url
           emptyDir: {}
       {{- if .Values.storage.localSsd }}
         - name: blob-sink-data
