--- a/barretenberg/cpp/src/barretenberg/bb/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/bb/CMakeLists.txt
@@ -1,20 +1,21 @@
-barretenberg_module(
-    bb-cli-lib
-    barretenberg
-    env
-    circuit_checker
-    ${TRACY_LIBS}
-    libdeflate::libdeflate_static)
-
-if(NOT DISABLE_AZTEC_VM)
-    add_dependencies(bb-cli-lib vm)
-endif()
-
 if (NOT(FUZZING) AND NOT(WASM))
     add_executable(
         bb
         main.cpp
     )
+
+    # Used also by bb_cli_bench
+    barretenberg_module(
+        bb-cli-lib
+        barretenberg
+        env
+        circuit_checker
+        ${TRACY_LIBS}
+        libdeflate::libdeflate_static)
+
+    if(NOT DISABLE_AZTEC_VM)
+        add_dependencies(bb-cli-lib vm)
+    endif()
 
     target_link_libraries(
         bb
