--- a/spartan/aztec-network/values.yaml
+++ b/spartan/aztec-network/values.yaml
@@ -146,6 +146,7 @@ fullNode:
   stakingAssetAddress: ""
   storageSize: "1Gi"
   dataDir: "/data"
+  sentinelEnabled: false
 
 validator:
   # If true, the validator will use its peers to serve as the boot node.
