--- a/spartan/aztec-network/values/alpha-testnet.yaml
+++ b/spartan/aztec-network/values/alpha-testnet.yaml
@@ -44,6 +44,17 @@ bootNode:
   # unused.
   externalHost: "http://localhost:8080"
 
+fullNode:
+  enabled: true
+  replicas: 1
+  maxOldSpaceSize: "8192"
+  storageSize: "512Gi"
+  resources:
+    requests:
+      cpu: "3"
+      memory: "10Gi"
+  sentinelEnabled: true
+
 proverNode:
   l1FixedPriorityFeePerGas: 3
   l1GasLimitBufferPercentage: 15
