fix execution of main.cpp in wasm

--- a/barretenberg/cpp/src/barretenberg/api/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/api/CMakeLists.txt
@@ -3,9 +3,8 @@ set(API_DEPENDENCIES
     ultra_vanilla_client_ivc
     dsl)
 
-if (NOT WASM)
+# if (NOT WASM)
     list(APPEND API_DEPENDENCIES libdeflate::libdeflate_static)
-endif()
-
+# endif()
 
 barretenberg_module(api ${API_DEPENDENCIES})
