--- a/barretenberg/cpp/src/barretenberg/benchmark/bb_cli_bench/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/benchmark/bb_cli_bench/CMakeLists.txt
@@ -1,3 +1,3 @@
-if (NOT(FUZZING) AND NOT(WASM))
+# if (NOT(FUZZING) AND NOT(WASM))
   barretenberg_module(bb_cli_bench bb-cli-lib)
-endif()
+# endif()
