fix: title check working in merge queue, pull-request.yml => pull-request-title.yml

--- a/.github/workflows/pull-request-title.yml
+++ b/.github/workflows/pull-request-title.yml
@@ -1,6 +1,8 @@
-name: Pull Request
+name: Pull Request Title
 
 on:
+  # This check is skipped in merge queue, but we need it to run (even skipped) for status checks.
+  merge_group:
   pull_request:
     types:
       - opened
