--- a/.github/workflows/ci3-external.yml
+++ b/.github/workflows/ci3-external.yml
@@ -2,6 +2,8 @@
 name: CI3 (External)
 
 on:
+  # This check is skipped in merge queue, but we need it to run (even skipped) for status checks.
+  merge_group:
   # For external devs. Workflow file edits won't take effect in the PR.
   pull_request_target:
     types: [opened, synchronize, reopened, ready_for_review, labeled]
