--- a/.github/workflows/nightly-masternet-deploy.yml
+++ b/.github/workflows/nightly-masternet-deploy.yml
@@ -22,16 +22,34 @@ jobs:
       - name: Get latest published commit
         id: get_commit
         run: |
+          MAX_DURATION=600
+          RETRY_DELAY=20
+          START_TIME=$(date +%s)
+
           COMMIT=$(git rev-parse HEAD)
-          TAGS=$(curl -s https://registry.hub.docker.com/v2/repositories/aztecprotocol/aztec/tags/$COMMIT-amd64)
-          if [[ "$TAGS" != *"not found"* ]]; then
+
+          while true; do
+            CURRENT_TIME=$(date +%s)
+            ELAPSED_TIME=$((CURRENT_TIME - START_TIME))
+
+            if [ $ELAPSED_TIME -ge $MAX_DURATION ]; then
+              echo "Timeout reached. Commit $COMMIT not published to docker hub after 10 minutes of trying."
+              exit 1
+            fi
+
+            TAGS=$(curl -s https://registry.hub.docker.com/v2/repositories/aztecprotocol/aztec/tags/$COMMIT-amd64)
+
+            if [[ "$TAGS" != *"not found"* ]]; then
               DIGEST=$(echo $TAGS | jq -r '.images[] | select(.architecture=="amd64") | .digest' | tr -d '"')
               echo "Deploying digest: $DIGEST"
               echo "COMMIT=$DIGEST" >> $GITHUB_OUTPUT
-          else
-            echo "Commit $COMMIT not published to docker hub"
-            exit 1
-          fi
+              exit 0
+            else
+              TIME_REMAINING=$((MAX_DURATION - ELAPSED_TIME))
+              echo "Commit $COMMIT not found yet. $ELAPSED_TIME seconds elapsed, $TIME_REMAINING seconds remaining. Retrying in $RETRY_DELAY seconds..."
+              sleep $RETRY_DELAY
+            fi
+          done
 
   deploy-network:
     needs: get-latest-commit
