--- a/.github/workflows/mirror-repos.yml
+++ b/.github/workflows/mirror-repos.yml
@@ -77,7 +77,7 @@ jobs:
             for nargo_file in $nargo_files; do
               git restore --source=origin/master -- $nargo_file
             done
-            git commit --all --amend -m "$(git log -1 --pretty=%B) [skip ci]"
+            git commit --all --amend -m "$(git log -1 --pretty=%B)"
 
             git push
           fi
