--- a/.test_patterns.yml
+++ b/.test_patterns.yml
@@ -53,6 +53,10 @@ tests:
     error_regex: "verified: false"
     owners:
       - *sergei
+  - regex: "barretenberg/acir_tests/scripts/run_test_browser.sh verify_honk_proof"
+    error_regex: "timeout: sending signal TERM to command"
+    owners:
+      - *adam
   - regex: "barretenberg/acir_tests/scripts/run_test_browser.sh"
     error_regex: "Failed to fetch"
     owners:
