only grind in merge queue

--- a/.github/workflows/ci3.yml
+++ b/.github/workflows/ci3.yml
@@ -179,7 +179,7 @@ jobs:
 
   ci-grind:
     runs-on: ubuntu-latest
-    if: github.event_name == 'merge_group' || (github.event_name == 'push' && github.ref_name == 'master')
+    if: github.event_name == 'merge_group'
     strategy:
       matrix:
         number: [1, 2, 3, 4, 5]
