--- a/spartan/aztec-network/resources/default.yaml
+++ b/spartan/aztec-network/resources/default.yaml
@@ -9,17 +9,17 @@ bootNode:
 validator:
   resources:
     requests:
-      memory: "512Mi"
+      memory: "1Gi"
     limits:
-      memory: "512Mi"
+      memory: "1Gi"
       cpu: "500m"
 
 fullNode:
   resources:
     requests:
-      memory: "512Mi"
+      memory: "1Gi"
     limits:
-      memory: "512Mi"
+      memory: "1Gi"
       cpu: "500m"
 
 proverNode:
