--- a/barretenberg/cpp/src/barretenberg/ultra_honk/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/ultra_honk/CMakeLists.txt
@@ -1,1 +1,1 @@
-barretenberg_module(ultra_honk sumcheck commitment_schemes stdlib_primitives stdlib_keccak stdlib_sha256)
+barretenberg_module(ultra_honk translator_vm sumcheck commitment_schemes stdlib_primitives stdlib_keccak stdlib_sha256)
