--- a/.github/workflows/ci3.yml
+++ b/.github/workflows/ci3.yml
@@ -36,7 +36,7 @@ jobs:
     if: github.event.pull_request.head.repo.fork != true
     environment: ${{ startsWith(github.ref, 'refs/tags/v') && 'master' || '' }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         # Only run arm64 build with arm64-ci label or on master.
         # The way to do conditions here is to parse full strings as JSON.
@@ -183,7 +183,7 @@ jobs:
     strategy:
       matrix:
         number: [1, 2, 3, 4, 5]
-      fail-fast: false
+      fail-fast: true
     steps:
       #############
       # Prepare Env
