feat: node mempool limiting

--- a/yarn-project/p2p/tsconfig.json
+++ b/yarn-project/p2p/tsconfig.json
@@ -28,6 +28,9 @@
       "path": "../protocol-contracts"
     },
     {
+      "path": "../sequencer-client"
+    },
+    {
       "path": "../simulator"
     },
     {
