fix msgpack usage

--- a/barretenberg/cpp/src/barretenberg/bb/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/bb/CMakeLists.txt
@@ -1,21 +1,18 @@
+# Used also by bb_cli_bench
+barretenberg_module(
+    bb-cli-lib
+    barretenberg
+    env
+    api
+    circuit_checker
+    ${TRACY_LIBS}
+    libdeflate::libdeflate_static)
 
+if(NOT DISABLE_AZTEC_VM)
+    add_dependencies(bb-cli-lib vm)
+endif()
 
-    # Used also by bb_cli_bench
-    barretenberg_module(
-        bb-cli-lib
-        barretenberg
-        env
-        api
-        circuit_checker
-        ${TRACY_LIBS}
-        libdeflate::libdeflate_static)
-
-    if(NOT DISABLE_AZTEC_VM)
-        add_dependencies(bb-cli-lib vm)
-
-    endif()
-
-if (NOT(FUZZING) AND NOT(WASM))
+if (NOT(FUZZING))
     add_executable(
         bb
         main.cpp
