--- a/.github/workflows/ci3.yml
+++ b/.github/workflows/ci3.yml
@@ -63,11 +63,10 @@ jobs:
 
       - name: CI Full Override
         # TODO consolidate legacy labels to just ci-full.
-        if: |
-          contains(github.event.pull_request.labels.*.name, 'e2e-all') ||
-          contains(github.event.pull_request.labels.*.name, 'network-all') ||
-          contains(github.event.pull_request.labels.*.name, 'ci-full')
-        run: echo "CI_FULL=1" >> $GITHUB_ENV
+        if: contains(github.event.pull_request.labels.*.name, 'ci-full')
+        run: |
+          echo "CI_FULL=1" >> $GITHUB_ENV
+          echo "USE_TEST_CACHE=0" >> $GITHUB_ENV
 
       - name: CI Nightly Check
         if: contains(github.ref, '-nightly.')
