--- a/yarn-project/kv-store/package.json
+++ b/yarn-project/kv-store/package.json
@@ -32,6 +32,7 @@
     "idb": "^8.0.0",
     "lmdb": "^3.2.0",
     "msgpackr": "^1.11.2",
+    "ohash": "^2.0.11",
     "ordered-binary": "^1.5.3"
   },
   "devDependencies": {
