--- a/.github/workflows/ci3.yml
+++ b/.github/workflows/ci3.yml
@@ -38,11 +38,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # Only run arm64 build with arm64-ci label or on master.
+        # Only run arm64 build with arm64-ci label or on master or on tagged releases.
         # The way to do conditions here is to parse full strings as JSON.
         settings: >-
           ${{ fromJson(
-            (contains(github.event.pull_request.labels.*.name, 'arm64-ci') || github.event_name == 'push' || github.event_name == 'merge_group') &&
+            (contains(github.event.pull_request.labels.*.name, 'arm64-ci') || github.event_name == 'push' || github.event_name == 'merge_group' || startsWith(github.ref, 'refs/tags/v')) &&
             '[{"arch":"amd64"},{"arch":"arm64"}]' ||
             '[{"arch":"amd64"}]') }}
     steps:
