feat: persist the bot and enable simulation capturing

--- a/spartan/aztec-network/values.yaml
+++ b/spartan/aztec-network/values.yaml
@@ -250,6 +250,8 @@ bot:
   ammTxs: false
   maxErrors: 3
   stopIfUnhealthy: true
+  dataDir: "/data"
+  storageSize: "2Gi"
   service:
     type: ClusterIP
     nodePort: 8082
