--- a/spartan/aztec-network/templates/transaction-bot.yaml
+++ b/spartan/aztec-network/templates/transaction-bot.yaml
@@ -17,6 +17,16 @@ spec:
     matchLabels:
       app: {{- include "aztec-network.selectorLabels" . | nindent 6 }}
       app: bot
+  {{- if not .Values.storage.localSsd }}
+  volumeClaimTemplates:
+    - metadata:
+        name: bot-data
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: {{ .Values.bot.storageSize }}
+  {{- end }}
   template:
     metadata:
       labels:
@@ -53,6 +63,14 @@ spec:
             defaultMode: 0755
         - name: scripts-output
           emptyDir: {}
+      {{- if .Values.storage.localSsd }}
+        - name: bot-data
+          emptyDir: {}
+      {{ else }}
+        - name: bot-data
+          persistentVolumeClaim:
+            claimName: bot-data
+      {{- end }}
       terminationGracePeriodSeconds: 5  # default is 30 - speed up initcontainer termination
       initContainers:
         {{- include "aztec-network.combinedAllSetupContainer" . | nindent 8 }}
@@ -71,6 +89,8 @@ spec:
               mountPath: /scripts
             - name: config
               mountPath: /shared/config
+            - name: bot-data
+              mountPath: {{ .Values.bot.dataDir }}
           env:
             - name: KEY_INDEX_START
               value: {{ .Values.aztec.botKeyIndexStart | quote }}
@@ -123,6 +143,10 @@ spec:
               echo "AZTEC_NODE_URL=${AZTEC_NODE_URL}"
 
               export BOT_ACCOUNT_SALT=$(echo $K8S_POD_NAME | awk -F'-' '{print $NF+1}') # +1 so that salt is not 0
+
+              # set this to a folder in order to capture simulation recordings for later debug
+              # be sure to set it to a persistent volume
+              export CIRCUIT_RECORD_DIR=""
 
               # a crude way to avoid a race condition that could arise if more than one bot is started:
               # the bots need to register contract classes, if they all start at the same time (or close to it) then multiple of them might try to register the same class leading to failed txs due to duplicate nullifiers
@@ -184,6 +208,8 @@ spec:
               value: "{{ .Values.ethereum.chainId }}"
             - name: TEST_ACCOUNTS
               value: "{{ .Values.aztec.testAccounts }}"
+            - name: DATA_DIRECTORY
+              value: "{{ .Values.bot.dataDir }}"
           ports:
             - name: http
               containerPort: {{ .Values.bot.service.nodePort }}
