--- a/.github/workflows/ci3-external.yml
+++ b/.github/workflows/ci3-external.yml
@@ -11,7 +11,8 @@ on:
 concurrency:
   # Only allow one run per <forked-repo>/<branch>.
   group: |
-    ci3-external-${{format('{0}/{1}', github.event.pull_request.head.repo.full_name, github.head_ref)}}
+    ci3-external-${{ github.event_name == 'pull_request' && format('{0}/{1}', github.event.pull_request.head.repo.full_name, github.head_ref)
+                                                         || github.run_id} }
   cancel-in-progress: true
 
 jobs:
