--- a/.github/workflows/ci3.yml
+++ b/.github/workflows/ci3.yml
@@ -183,7 +183,7 @@ jobs:
     if: github.event_name == 'merge_group'
     strategy:
       matrix:
-        number: [1, 2, 3, 4, 5]
+        number: [1, 2]
       fail-fast: false
     steps:
       #############
