--- a/.test_patterns.yml
+++ b/.test_patterns.yml
@@ -128,6 +128,10 @@ tests:
     error_regex: "BlockOutOfRangeError"
     owners:
       - *palla
+  - regex: "simple e2e_sequencer_config"
+    error_regex: "Anvil failed to stop in time"
+    owners:
+      - *palla
 
   # yarn-project tests
   - regex: "p2p/src/services/discv5/discv5_service.test.ts"
@@ -136,6 +140,10 @@ tests:
       - *sean
   - regex: "p2p/src/client/p2p_client.test.ts"
     error_regex: "Exceeded timeout of 120000"
+    owners:
+      - *sean
+  - regex: "p2p/src/services/reqresp/reqresp.test.ts"
+    error_regex: "✕ should stop after max retry attempts"
     owners:
       - *sean
   - regex: "p2p/src/testbench/port_change.test.ts"
