--- a/.github/workflows/ci3.yml
+++ b/.github/workflows/ci3.yml
@@ -104,7 +104,7 @@ jobs:
           EXTERNAL_ETHEREUM_CONSENSUS_HOST: "https://beacon.${{ secrets.GCP_SEPOLIA_URL }}"
           EXTERNAL_ETHEREUM_CONSENSUS_HOST_API_KEY: ${{ secrets.GCP_SEPOLIA_API_KEY }}
           EXTERNAL_ETHEREUM_CONSENSUS_HOST_API_KEY_HEADER: "X-goog-api-key"
-        run: exec bash -c "trap 'echo TRAPPED && exit' SIGINT SIGTERM; ./ci.sh ec2 & wait $!"
+        run: exec ./ci.sh ec2
 
       - name: Download benchmarks
         if: matrix.settings.arch == 'amd64' && github.event_name == 'push' && github.ref_name == 'master'
@@ -216,8 +216,7 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
           CI: 1
           CI_FULL: 1
-        run: |
-          ./ci.sh ec2-test
+        run: exec ./ci.sh ec2-test
 
   # Necessary as github actions won't allow checks on matrix builds.
   merge-check:
