--- a/noir-projects/noir-contracts/contracts/test/static_child_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/test/static_child_contract/Nargo.toml
@@ -5,5 +5,5 @@ authors = [""]
 compiler_version = ">=0.28.0"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
-value_note = { path = "../../../aztec-nr/value-note" }
+aztec = { path = "../../../../aztec-nr/aztec" }
+value_note = { path = "../../../../aztec-nr/value-note" }
