--- a/noir-projects/noir-contracts/contracts/test/static_parent_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/test/static_parent_contract/Nargo.toml
@@ -5,5 +5,5 @@ authors = [""]
 compiler_version = ">=0.28.0"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
+aztec = { path = "../../../../aztec-nr/aztec" }
 static_child_contract = { path = "../static_child_contract"}
