--- a/noir-projects/noir-contracts/contracts/test/test_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/test/test_contract/Nargo.toml
@@ -5,7 +5,7 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
-address_note = { path = "../../../aztec-nr/address-note" }
-value_note = { path = "../../../aztec-nr/value-note" }
-token_portal_content_hash_lib = { path = "../token_portal_content_hash_lib" }
+aztec = { path = "../../../../aztec-nr/aztec" }
+address_note = { path = "../../../../aztec-nr/address-note" }
+value_note = { path = "../../../../aztec-nr/value-note" }
+token_portal_content_hash_lib = { path = "../../libs/token_portal_content_hash_lib" }
