--- a/noir-projects/noir-contracts/contracts/account/schnorr_hardcoded_account_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/account/schnorr_hardcoded_account_contract/Nargo.toml
@@ -5,6 +5,6 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
-authwit = { path = "../../../aztec-nr/authwit" }
+aztec = { path = "../../../../aztec-nr/aztec" }
+authwit = { path = "../../../../aztec-nr/authwit" }
 schnorr = { tag = "v0.1.1", git = "https://github.com/noir-lang/schnorr" }
