--- a/noir-projects/noir-contracts/contracts/app/amm_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/app/amm_contract/Nargo.toml
@@ -5,6 +5,6 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
+aztec = { path = "../../../../aztec-nr/aztec" }
 token = { path = "../token_contract" }
-uint_note = { path = "../../../aztec-nr/uint-note" }
+uint_note = { path = "../../../../aztec-nr/uint-note" }
