--- a/noir-projects/noir-contracts/contracts/app/crowdfunding_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/app/crowdfunding_contract/Nargo.toml
@@ -5,7 +5,7 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
-uint_note = { path = "../../../aztec-nr/uint-note" }
+aztec = { path = "../../../../aztec-nr/aztec" }
+uint_note = { path = "../../../../aztec-nr/uint-note" }
 token = { path = "../token_contract" }
-router = { path = "../router_contract" }
+router = { path = "../../protocol/router_contract" }
