--- a/noir-projects/noir-contracts/contracts/app/nft_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/app/nft_contract/Nargo.toml
@@ -5,6 +5,6 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
-compressed_string = { path = "../../../aztec-nr/compressed-string" }
-authwit = { path = "../../../aztec-nr/authwit" }
+aztec = { path = "../../../../aztec-nr/aztec" }
+compressed_string = { path = "../../../../aztec-nr/compressed-string" }
+authwit = { path = "../../../../aztec-nr/authwit" }
