--- a/noir-projects/noir-contracts/contracts/app/price_feed_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/app/price_feed_contract/Nargo.toml
@@ -5,4 +5,4 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
+aztec = { path = "../../../../aztec-nr/aztec" }
