--- a/noir-projects/noir-contracts/contracts/app/token_blacklist_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/app/token_blacklist_contract/Nargo.toml
@@ -5,5 +5,5 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
-authwit = { path = "../../../aztec-nr/authwit" }
+aztec = { path = "../../../../aztec-nr/aztec" }
+authwit = { path = "../../../../aztec-nr/authwit" }
