--- a/noir-projects/noir-contracts/contracts/app/token_bridge_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/app/token_bridge_contract/Nargo.toml
@@ -5,6 +5,6 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
-token_portal_content_hash_lib = { path = "../token_portal_content_hash_lib" }
+aztec = { path = "../../../../aztec-nr/aztec" }
+token_portal_content_hash_lib = { path = "../../libs/token_portal_content_hash_lib" }
 token = { path = "../token_contract" }
