--- a/noir-projects/noir-contracts/contracts/app/uniswap_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/app/uniswap_contract/Nargo.toml
@@ -5,8 +5,8 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
-authwit = { path = "../../../aztec-nr/authwit" }
+aztec = { path = "../../../../aztec-nr/aztec" }
+authwit = { path = "../../../../aztec-nr/authwit" }
 token = { path = "../token_contract" }
 token_bridge = { path = "../token_bridge_contract" }
 keccak256 = { tag = "v0.1.0", git = "https://github.com/noir-lang/keccak256" }
