--- a/noir-projects/noir-contracts/contracts/libs/ecdsa_public_key_note/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/libs/ecdsa_public_key_note/Nargo.toml
@@ -5,4 +5,4 @@ compiler_version = ">=0.25.0"
 type = "lib"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
+aztec = { path = "../../../../aztec-nr/aztec" }
