--- a/noir-projects/noir-contracts/contracts/libs/token_portal_content_hash_lib/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/libs/token_portal_content_hash_lib/Nargo.toml
@@ -5,5 +5,5 @@ compiler_version = ">=0.25.0"
 type = "lib"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
+aztec = { path = "../../../../aztec-nr/aztec" }
 keccak256 = { tag = "v0.1.0", git = "https://github.com/noir-lang/keccak256" }
