--- a/noir-projects/noir-contracts/contracts/protocol/contract_instance_deployer_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/protocol/contract_instance_deployer_contract/Nargo.toml
@@ -5,5 +5,5 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
+aztec = { path = "../../../../aztec-nr/aztec" }
 contract_class_registerer = { path = "../contract_class_registerer_contract" }
