--- a/noir-projects/noir-contracts/contracts/test/avm_test_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/test/avm_test_contract/Nargo.toml
@@ -5,7 +5,7 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
-compressed_string = { path = "../../../aztec-nr/compressed-string" }
+aztec = { path = "../../../../aztec-nr/aztec" }
+compressed_string = { path = "../../../../aztec-nr/compressed-string" }
 sha256 = { tag = "v0.1.2", git = "https://github.com/noir-lang/sha256" }
 keccak256 = { tag = "v0.1.0", git = "https://github.com/noir-lang/keccak256" }
