--- a/noir-projects/noir-contracts/contracts/test/child_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/test/child_contract/Nargo.toml
@@ -5,6 +5,6 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
-value_note = { path = "../../../aztec-nr/value-note" }
+aztec = { path = "../../../../aztec-nr/aztec" }
+value_note = { path = "../../../../aztec-nr/value-note" }
 
