--- a/noir-projects/noir-contracts/contracts/test/updatable_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/test/updatable_contract/Nargo.toml
@@ -5,6 +5,6 @@ compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
-aztec = { path = "../../../aztec-nr/aztec" }
-value_note = { path = "../../../aztec-nr/value-note" }
-contract_instance_deployer = { path = "../contract_instance_deployer_contract" }
+aztec = { path = "../../../../aztec-nr/aztec" }
+value_note = { path = "../../../../aztec-nr/value-note" }
+contract_instance_deployer = { path = "../../protocol/contract_instance_deployer_contract" }
