--- a/.test_patterns.yml
+++ b/.test_patterns.yml
@@ -119,6 +119,10 @@ tests:
     error_regex: "✕ Someone else can mint funds to me on my behalf"
     owners:
       - *lasse
+  - regex: "simple e2e_cross_chain_messaging/token_bridge_public"
+    error_regex: "✕ Publicly deposit funds"
+    owners:
+      - *lasse
   - regex: "simple e2e_cross_chain_messaging/token_bridge_failure_cases"
     error_regex: "✕ Can't claim funds"
     owners:
