--- a/.test_patterns.yml
+++ b/.test_patterns.yml
@@ -25,6 +25,7 @@ names:
   - sergei: &sergei "U05RR81391B"
   - spyros: &spyros "U03FCET0DQE"
   - jan: &jan "U03FGA0BWNR"
+  - esau: &esau "U067FJ9A4Q1"
 
 tests:
   # barretenberg
@@ -183,6 +184,11 @@ tests:
     error_regex: "Test timeout of 90000ms exceeded."
     owners:
       - *grego
+
+  - regex: "boxes/scripts/run_test.sh"
+    error_regex: "expect(locator).toBeVisible()"
+    owners:
+      - *esau
 
   # kind tests
   - regex: "spartan/bootstrap.sh"
