--- a/noir-projects/noir-contracts/contracts/fees/fpc_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/fees/fpc_contract/Nargo.toml
@@ -7,5 +7,5 @@ type = "contract"
 [dependencies]
 aztec = { path = "../../../../aztec-nr/aztec" }
 authwit = { path = "../../../../aztec-nr/authwit" }
-token = { path = "../token_contract" }
+token = { path = "../../app/token_contract" }
 uint_note = { path = "../../../../aztec-nr/uint-note" }
