chore: add helper script for gov

--- a/l1-contracts/.gitignore
+++ b/l1-contracts/.gitignore
@@ -7,6 +7,7 @@ release-out/
 
 # Ignores development broadcast logs
 !/broadcast
+/broadcast/*/11155111/
 /broadcast/*/31337/
 /broadcast/**/dry-run/
 
