--- a/build-images/src/Dockerfile
+++ b/build-images/src/Dockerfile
@@ -227,6 +227,7 @@ RUN apt update && \
         vim \
         zsh \
         inotify-tools \
+        google-cloud-sdk-gke-gcloud-auth-plugin \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Install osxcross. Requires developer to mount SDK from their mac host.
