unify opcode representation

--- a/barretenberg/cpp/src/CMakeLists.txt
+++ b/barretenberg/cpp/src/CMakeLists.txt
@@ -85,6 +85,7 @@ add_subdirectory(barretenberg/goblin)
 add_subdirectory(barretenberg/grumpkin_srs_gen)
 add_subdirectory(barretenberg/lmdblib)
 add_subdirectory(barretenberg/numeric)
+add_subdirectory(barretenberg/op_queue)
 add_subdirectory(barretenberg/plonk)
 add_subdirectory(barretenberg/plonk_honk_shared)
 add_subdirectory(barretenberg/polynomials)
