don't skip kind

--- a/.test_patterns.yml
+++ b/.test_patterns.yml
@@ -193,7 +193,7 @@ tests:
   # kind tests
   - regex: "spartan/bootstrap.sh"
     # Will skip all kind tests for now. Too unstable, blocking merge queue.
-    skip: true
+    # skip: true
     error_regex: "timeout: sending signal TERM to command"
     owners:
       - *alex
