--- a/.test_patterns.yml
+++ b/.test_patterns.yml
@@ -73,11 +73,7 @@ tests:
     owners:
       - *charlie
   # CI3 is breaking noir tests due to handling of paths.
-  - regex: "tests::execution_success"
-    skip: true
-    owners:
-      - *tom
-  - regex: "tests::compile_failure"
+  - regex: "tests::{compile_failure,execution_success}"
     skip: true
     owners:
       - *tom
