Enable solc optimizer

--- a/l1-contracts/foundry.toml
+++ b/l1-contracts/foundry.toml
@@ -4,6 +4,8 @@ out = 'out'
 libs = ['lib']
 solc = "0.8.27"
 evm_version = 'cancun'
+optimizer = true
+
 # Helper to get all the contract names in the src/governance and src/core directories
 # find ./src/governance ./src/core ./src/periphery/Forwarder -type f -name "*.sol" -exec grep -h "^contract [A-Za-z]" {} \; | sed -E 's/contract ([A-Za-z0-9_]+).*/"\1"/' | tr "\n" ", "
 gas_reports = ["Governance","Registry","RewardDistributor","GovernanceProposer","CoinIssuer","Rollup","Inbox","Outbox","FeeJuicePortal","RollupCore","SlashingProposer","Slasher","Forwarder"]
